[project]
name = "caribbean-fish-recall"
version = "0.1.0"
description = "Spaced-repetition trainer for identifying 58 Caribbean reef fish species"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "itsdangerous>=2.2.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-fasthtml>=0.12.39",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
